<resources>
    <string name="AP_RPT_ACCEL_ERR">The accelerometer is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_APP_UNCONNECT">Please connect the App before flying</string>
    <string name="AP_RPT_ATTITUDE">The aircraft is not flat or bumpy</string>
    <string name="AP_RPT_ATT_OVERFLOW">Reserved exception</string>
    <string name="AP_RPT_BARO_ERR">The barometer is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_CYRO_ERROR">The gyroscope is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_Compass_Err">The compass is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_DATA_INVALID">No-fly zone data is abnormal, please upgrade no-fly zone</string>
    <string name="AP_RPT_ERR_PILOT_MODE">This function cannot be used in this mode</string>
    <string name="AP_RPT_GEO_FENCE">Flight limit exceeded</string>
    <string name="AP_RPT_GPS_ERR">GPS is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_HAS_TAKEN_OFF">The aircraft is in flight and cannot be executed</string>
    <string name="AP_RPT_Home_Not_Set">The home point was not successfully set and cannot be executed</string>
    <string name="AP_RPT_INVALID_CMD">Sorry, the command could not be executed</string>
    <string name="AP_RPT_Is_LANDING">The aircraft is landing and cannot be executed</string>
    <string name="AP_RPT_LOGIC_ERROR">Command too fast to execute</string>
    <string name="AP_RPT_LOG_START_FAILED">System initialization is abnormal, please restart the aircraft</string>
    <string name="AP_RPT_MODE_TRANS_REJECT">The current mode does not support switching</string>
    <string name="AP_RPT_MOTOR_LOCK">Motor is locked, please check motor status</string>
    <string name="AP_RPT_NEED_NEW_COOR">Failed to set the waypoint, it is recommended to set it again</string>
    <string name="AP_RPT_NON_AUTO_MODE">The aircraft is in attitude mode and cannot be positioned</string>
    <string name="AP_RPT_NOT_IN_AP_MODE">Not currently in auto flight mode</string>
    <string name="AP_RPT_NO_FLY_ZONE">Flying in the no-fly zone is prohibited</string>
    <string name="AP_RPT_NO_WAY_POINT">The waypoint is abnormal, it is recommended to re-plan the waypoint</string>
    <string name="AP_RPT_ON_Calibration">The system is in calibration, please wait</string>
    <string name="AP_RPT_PARA_ERR">Parameter error, please try again</string>
    <string name="AP_RPT_PHASE_LANDING">The aircraft is in the landing phase</string>
    <string name="AP_RPT_PHASE_TAKE_OFF">The aircraft is in the take-off phase</string>
    <string name="AP_RPT_RC_LOST">Please connect the remote control before flying</string>
    <string name="AP_RPT_RTH_ING">The aircraft is returning</string>
    <string name="AP_RPT_RTH_KEY_SET">The auto return key is at the return position, please dial it to the left</string>
    <string name="AP_RPT_STICKY_NEUTRAL">The remote control needs to be calibrated</string>
    <string name="AP_RPT_Vpu">The aircraft is in optical flow mode and cannot be positioned</string>
    <string name="AT_RPT_LOGIC">The aircraft is being upgraded, please wait a moment</string>
    <string name="AT_RPT_STICK_NEUTAL">The aircraft takes off automatically, please do not use the joystick</string>
    <string name="GC_caliFail_discon">Please connect the remote control before calibrating</string>
    <string name="GC_caliFail_discon_drone">Please connect the aircraft before calibrating</string>
    <string name="GC_caliSucess">Calibration successful</string>
    <string name="GC_calibrationing">The gimbal is automatically calibrating, please wait</string>
    <string name="GC_califail">Calibration failed</string>
    <string name="GC_hight_Vibrator">The gimbal vibrates too much</string>
    <string name="GC_hight_temperature">The temperature of the gimbal is too high, please calibrate after the temperature is normal</string>
    <string name="GC_horLine_uneven">The gimbal is not placed horizontally</string>
    <string name="GC_low_temperature">The temperature of the gimbal is too low, please warm up properly and then calibrate</string>
    <string name="GC_temperature_low_accuracy">The temperature of the gimbal fluctuates greatly, and the calibration is performed after the temperature is stable</string>
    <string name="GC_tune_fail">Tune failed</string>
    <string name="GC_wrong_angle">Gimbal angle is incorrect</string>
    <string name="LOW_POWER">The power of the aircraft is low, please land as soon as possible</string>
    <string name="Not_IN_AIR">Please take off the aircraft</string>
    <string name="SSID">SSID</string>
    <string name="about">About</string>
    <string name="about_left_stick">Learn about the left stick</string>
    <string name="about_mark">Go to Mark</string>
    <string name="about_motor">Start the drone</string>
    <string name="about_right_stick">Learn about the right stick</string>
    <string name="about_version">Xiaomi Drone %s</string>
    <string name="account">Account</string>
    <string name="actionpause">Pause</string>
    <string name="actionresume">Resume</string>
    <string name="after_upgrade">More later</string>
    <string name="after_upgrade_down">download later</string>
    <string name="again_exit">Press again to exit</string>
    <string name="aggree_milletr">I have agreed to accept Xiaomi's</string>
    <string name="agree">Agree</string>
    <string name="agreement_privacy">Privacy Policy</string>
    <string name="agreement_protocol">User Agreement</string>
    <string name="agreement_shengming">Disclaimer</string>
    <string name="agreement_yu">and</string>
    <string name="all_capacity">Total capacity:</string>
    <string name="angle_limit">angle limit</string>
    <string name="anticlockwise_angle">anticlockwise</string>
    <string name="apk_downing">apk is downloading and upgrading</string>
    <string name="app">APP</string>
    <string name="app_name">Xiaomi Drone</string>
    <string name="arrowkey_horzontal_operation">Horizontal Operation Reverse</string>
    <string name="arrowkey_vertial_operation">Vertical Operation Reverse</string>
    <string name="ask_exception">Failed to get flight record, please try again later</string>
    <string name="assist_the_location_mode_to_open_please_be_careful_to_fly">" You are opening Assisted Location Mode (VPU), please be careful
 Read the following:
 1. Please make sure the light is greater than 15Lx, the ground texture is clear and wide
 Flying in a wide area, the height is limited to 0.5 meters to 2.5 meters, otherwise there will be
 danger.
 2. During flight, when the auxiliary positioning mode is invalid, the aircraft will
 Automatically switch to Attitude mode, requires you to have Attitude mode
 The flight experience and skills below can be used to fly safely.
 3. Any accidents caused by indoor flying are not
 The drone is covered by insurance, please install the protective frame carefully
 flight. "</string>
    <string name="attfling">In flight</string>
    <string name="attibase">Can take off</string>
    <string name="audio_title">Audio</string>
    <string name="auto_chage_brightness">The indicator light of the body will automatically dim when taking pictures (invalid in attitude mode)</string>
    <string name="auto_land">Autoland</string>
    <string name="auto_save_image">Photos are automatically saved to the phone album</string>
    <string name="autoreturnto">Auto Return</string>
    <string name="baibaoxiang">Treasure Box</string>
    <string name="baibaoxiang_des">More and more interesting one-button control functions are all in this treasure box</string>
    <string name="battery">Battery</string>
    <string name="battery_damage">damaged</string>
    <string name="battery_des">"Observe the battery power of the aircraft in real time
When the battery power is lower than 30%, it enters low power mode, and the aircraft should return to home"</string>
    <string name="battery_electricity">Battery current:</string>
    <string name="battery_endurance">Battery time:</string>
    <string name="battery_four">Cell 4</string>
    <string name="battery_high_temperature">" | high temperature"</string>
    <string name="battery_info">Battery info</string>
    <string name="battery_life">Battery Life:</string>
    <string name="battery_low_temperature">" | low temperature"</string>
    <string name="battery_nomal_temperature">" | normal"</string>
    <string name="battery_one">Cell 1</string>
    <string name="battery_over_dischange">over-dischange</string>
    <string name="battery_pressure_highter">The pressure difference is too high</string>
    <string name="battery_remaining">remaining</string>
    <string name="battery_temperature">Battery temperature:</string>
    <string name="battery_three">Cell 3</string>
    <string name="battery_title">Aircraft battery</string>
    <string name="battery_two">Cell 2</string>
    <string name="battery_update_hint">"Please use the battery power to 15%, and leave it at rest until the power is 0.
The battery will automatically update capacity"</string>
    <string name="battery_version">Battery version:</string>
    <string name="battery_voltage_four">Cell 4 voltage:</string>
    <string name="battery_voltage_one">Cell 1 voltage:</string>
    <string name="battery_voltage_sencond">Cell 2 voltage:</string>
    <string name="battery_voltage_three">Cell 3 voltage:</string>
    <string name="begincalibration">Begin calibration</string>
    <string name="camera_version">Camera version:</string>
    <string name="cancel_upgrade">Cannot upgrade</string>
    <string name="contactlimit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.-@</string>
    <string name="customer_service_telephone_number">Or contact our customer service: 400-100-5678</string>
    <string name="downfail1">Firmware download failed!</string>
    <string name="exit">Exit</string>
    <string name="fc_version">Flight control version:</string>
    <string name="fc_x6_bl_version">Aircraft bootloader version:</string>
    <string name="fc_x6_version">Aircraft relay version:</string>
    <string name="feed_back_connect_hint">Leave your contact information and a product manager will contact you</string>
    <string name="feed_back_photo_screen_shot">Photo or screenshot (optional, up to three)</string>
    <string name="feed_back_please_input_you_advice">Please enter your suggestion</string>
    <string name="feed_back_problems_and_opinions">questions and comments</string>
    <string name="feed_back_submit_button">Submit</string>
    <string name="feedback_email">Email (optional)</string>
    <string name="feedback_telephone">Telephone (optional)</string>
    <string name="gimbal_version">Gimbal version:</string>
    <string name="judge_faq">Before giving feedback, check out our FAQ! </string>
    <string name="land">Login</string>
    <string name="miaircraft">Xiaomi drone</string>
    <string name="no_available_network">No network currently available! </string>
    <string name="nofly_version">No-fly zone version:</string>
    <string name="notneedlogin"><u>Not currently logged in</u></string>
    <string name="rc_version">Remote control version:</string>
    <string name="rc_x6_version">Remote Relay Version:</string>
    <string name="redownload">Redownload</string>
    <string name="servo_version">Servo version:</string>
    <string name="suggest_number_default">1000</string>
    <string name="telephonelimit">0123456789</string>
    <string name="updatefail">Firmware upgrade failed! </string>
    <string name="upgrade_future">You can continue to fly without upgrading for the time being</string>
    <string name="upgrade_sendorder_delay">Retry</string>
    <string name="welcomuseing">Welcome</string>
    <string name="x2_version">Optical flow version:</string>
</resources>