<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/activity_general_setting" android:background="#ff1f1f21" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.view.percent.PercentRelativeLayout android:id="@id/aboutRelativeLayout" android:background="#ff2a2a2a" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_heightPercent="13.79%">
        <Button android:id="@id/aboutBtn" android:background="@drawable/btn_setting_back_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerVertical="true" app:layout_widthPercent="57.7%h" app:layout_heightPercent="57.7%h" app:layout_marginLeftPercent="1.71%" />
        <TextView android:textColor="#ffffffff" android:id="@id/aboutTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about" android:layout_centerHorizontal="true" android:layout_centerVertical="true" app:layout_textSizePercent="28.1%" />
    </com.fimi.kernel.view.percent.PercentRelativeLayout>
    <TextView android:id="@id/about_line" android:background="#ff4a4a4a" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/aboutRelativeLayout" app:layout_heightPercent="0.2%h" />
    <ImageView android:id="@id/aboutImg" android:background="@drawable/logo_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="34.5dip" android:layout_below="@id/about_line" android:layout_centerHorizontal="true" />
    <TextView android:textSize="14.0sp" android:textColor="#80ffffff" android:id="@id/aboutVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version" android:layout_below="@id/aboutImg" android:layout_centerHorizontal="true" app:layout_marginTopPercent="3.65%" />
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_below="@id/aboutVersion" android:layout_centerHorizontal="true">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_fc_tip" android:text="@string/fc_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_fc" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_battery_tip" android:text="@string/battery_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_battery" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_x2_tip" android:text="@string/x2_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_x2" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_rc_tip" android:text="@string/rc_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_rc" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_rc_x6_tip" android:text="@string/rc_x6_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_rc_x6" style="@style/version_display_text" />
            </LinearLayout>
        </LinearLayout>
        <View android:layout_width="45.0dip" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_camera_tip" android:text="@string/camera_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_camera" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_gimbal_tip" android:text="@string/gimbal_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_gimbal" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_servo_tip" android:text="@string/servo_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_servo" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_nofly_tip" android:text="@string/nofly_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_nofly" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout android:visibility="gone" style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_fc_bootloader_tip" android:text="@string/fc_x6_bl_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_fc_bootloader_version" style="@style/version_display_text" />
            </LinearLayout>
            <LinearLayout style="@style/version_inner_linearLayout">
                <TextView android:id="@id/tv_fc_x6_tip" android:text="@string/fc_x6_version" style="@style/version_font_text" />
                <TextView android:id="@id/tv_fc_x6" style="@style/version_display_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="12.0dip" android:textColor="#80ffffff" android:gravity="center" android:id="@id/scoreBtn" android:background="@drawable/assess_btn_selector" android:layout_width="115.32999dip" android:layout_height="wrap_content" android:layout_marginBottom="36.0dip" android:text=" 去评分 " android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:id="@id/copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Copyright © 2015-2016 Fimi, All Rights Reserved. | " />
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:id="@id/agreementshengming_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_shengming" />
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" | " />
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:id="@id/agreementProtocol_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_protocol" />
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" | " />
        <TextView android:textSize="10.0sp" android:textColor="#33ffffff" android:id="@id/agreementPrivacy_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_privacy" />
    </LinearLayout>
</com.fimi.kernel.view.percent.PercentRelativeLayout>