<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout android:background="#ff1f1f21" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/heardView" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_heightPercent="13.79%" layout="@layout/settingheardview" />
    <TextView android:id="@id/diverline" android:background="#ff4a4a4a" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_below="@id/heardView" app:layout_heightPercent="0.2%h" />
    <ScrollView android:scrollbarStyle="outsideOverlay" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@id/heardView" android:overScrollMode="never">
        <com.fimi.kernel.view.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.599976dip">
            <RelativeLayout android:gravity="center" android:id="@id/customer_server_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/color_set_model" android:id="@id/judge_faq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/judge_faq" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/customer_service_telephone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customer_service_telephone_number" android:layout_toRightOf="@id/judge_faq" android:alpha="0.7" />
            </RelativeLayout>
            <TextView android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/question_feedback_des" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.599976dip" android:text="@string/feed_back_problems_and_opinions" android:layout_below="@id/customer_server_group" android:alpha="0.7" app:layout_marginLeftPercent="5.416%w" />
            <com.fimi.kernel.view.percent.PercentRelativeLayout android:id="@id/suggest_edit_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_below="@id/question_feedback_des" app:layout_marginLeftPercent="5.416%w" app:layout_marginRightPercent="5.416%w">
                <EditText android:textSize="13.0sp" android:textColor="#80ffffff" android:textColorHint="#33ffffff" android:gravity="top" android:id="@id/suggestEdit" android:background="@drawable/edit_frame_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="202.0px" android:minHeight="202.0px" android:hint="@string/feed_back_please_input_you_advice" android:maxLength="1000" android:imeOptions="flagNoFullscreen" />
                <TextView android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/limit_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/suggest_number_default" android:layout_alignRight="@id/suggestEdit" android:layout_alignBottom="@id/suggestEdit" android:alpha="0.7" app:layout_marginRightPercent="2%w" />
            </com.fimi.kernel.view.percent.PercentRelativeLayout>
            <TextView android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/feedback_picture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.599976dip" android:text="@string/feed_back_photo_screen_shot" android:layout_below="@id/suggest_edit_group" android:alpha="0.7" app:layout_marginLeftPercent="5.416%w" />
            <GridView android:id="@id/add_picture_gridview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:horizontalSpacing="10.0dip" android:verticalSpacing="10.0dip" android:numColumns="3" android:layout_below="@id/feedback_picture" app:layout_marginLeftPercent="5.416%w" app:layout_marginRightPercent="5.416%w" />
            <TextView android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/email_des" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.599976dip" android:text="@string/feedback_email" android:layout_below="@id/add_picture_gridview" android:alpha="0.7" app:layout_marginLeftPercent="5.416%w" />
            <EditText android:textSize="13.0sp" android:textColor="#80ffffff" android:textColorHint="#33ffffff" android:id="@id/email_content" android:background="@drawable/edit_frame_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:maxHeight="40.0dip" android:hint="@string/feed_back_connect_hint" android:maxLength="20" android:digits="@string/contactlimit" android:layout_below="@id/email_des" android:imeOptions="flagNoFullscreen" app:layout_marginLeftPercent="5.416%w" app:layout_marginRightPercent="5.416%w" />
            <TextView android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/telephone_des" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.599976dip" android:text="@string/feedback_telephone" android:layout_below="@id/email_content" android:alpha="0.7" app:layout_marginLeftPercent="5.416%w" />
            <EditText android:textSize="13.0sp" android:textColor="#80ffffff" android:textColorHint="#33ffffff" android:id="@id/telephone_content" android:background="@drawable/edit_frame_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:maxHeight="40.0dip" android:hint="@string/feed_back_connect_hint" android:maxLength="20" android:digits="@string/telephonelimit" android:layout_below="@id/telephone_des" android:imeOptions="flagNoFullscreen" app:layout_marginLeftPercent="5.416%w" app:layout_marginRightPercent="5.416%w" />
            <Button android:textSize="13.329987sp" android:textColor="#e6ffffff" android:id="@id/sendSuggest" android:background="@drawable/register_btn_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.599976dip" android:layout_marginBottom="16.599976dip" android:text="@string/feed_back_submit_button" android:height="40.0sp" android:layout_below="@id/telephone_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" app:layout_marginLeftPercent="5.416%w" app:layout_marginRightPercent="5.416%w" />
        </com.fimi.kernel.view.percent.PercentRelativeLayout>
    </ScrollView>
    <FrameLayout android:id="@id/show_detail_pic_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateDrawable="@drawable/progress_media" android:layout_centerInParent="true" />
</com.fimi.kernel.view.percent.PercentRelativeLayout>